test_data/typeerror/salt-53394.py
pgctnt = None
log.trace("Content size after decompression: %s", len(pgctnt))